--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 10
-      - run: npm install
+      - run: npm init
       - run: npm ci #correr instalación limpian
       - run: npm test #hacer validaciones de la funcion
       - run: npm run buil #correr funcion
