--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -13,7 +13,7 @@ jobs:
         with:
           node-version: 10
 
-      - run: npm init
+      # - run: npm init
       # - run: npm ci #correr instalación limpian
       - run: npm test #hacer validaciones de la funcion
       - run: npm run buil #correr funcion
