--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -14,6 +14,6 @@ jobs:
           node-version: 10
 
       # - run: npm init
-      # - run: npm ci #correr instalación limpian
+      - run: npm ci #correr instalación limpian
       - run: npm test #hacer validaciones de la funcion
-      - run: npm run buil #correr funcion
+      - run: npm run build #correr funcion
