--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -17,5 +17,5 @@ scripts:
   
       - run: install npm
       - run: npm ci #correr instalación limpian
-      - run: npm test "echo \"Error: no test specified\" && exit 1" #hacer validaciones de la funcion
+      - run: npm test #"echo \"Error: no test specified\" && exit 1" #hacer validaciones de la funcion
       - run: npm run build #correr funcion
