--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -10,10 +10,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
-        with:
-          node-version: 10
-
-      - run: install npm
+        #with:
+         # node-version: 10
+      #- run: install npm
       - run: npm ci #correr instalación limpian
       - run: npm test #"echo \"Error: no test specified\" && exit 1" #hacer validaciones de la funcion
       - run: npm run build #correr funcion
