--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -13,6 +13,6 @@ jobs:
         #with:
          # node-version: 10
       #- run: install npm
-      - run: npm ci #correr instalación limpian
-      - run: npm test #"echo \"Error: no test specified\" && exit 1" #hacer validaciones de la funcion
+      #- run: npm ci #correr instalación limpian
+      - run: npm test  #hacer validaciones de la funcion
       - run: npm run build #correr funcion
